public interface IDeviceOperations {
    void replace();
    void detect();
    void installDriver();
    void deleteDriver();
}
